added scaffolded backbone application and wired up grunt tasks for project generation

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,11 +1,50 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title><%= title %></title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
-  </head>
-  <body>
-    <h1><%= title %></h1>
-    <p>Welcome to <%= title %></p>
-  </body>
+    <head>
+        <title><%= title %></title>
+
+        <meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1.0, user-scalable=yes">
+
+        <style>
+            html {
+                font-family: 'Roboto', 'Arial', sans-serif;
+                font-size: 14px;
+            }
+            .content {
+                height: 2000px;
+            }
+        </style>
+
+        <!-- 1. Load webcomponents.min.js for polyfill support. -->
+        <script src="javascript/scripts.js"></script>
+
+
+        <!-- 2. Use an HTML Import to bring in the element. -->
+        <link rel="import" href="/bower_components/font-roboto/roboto.html">
+        <link rel="import" href="/bower_components/core-scaffold/core-scaffold.html">
+        <link rel="import" href="/bower_components/core-header-panel/core-header-panel.html">
+        <link rel="import" href="/bower_components/core-toolbar/core-toolbar.html">
+        <link rel="import" href="/bower_components/core-menu/core-menu.html">
+        <link rel="import" href="/bower_components/core-item/core-item.html">
+        <link rel="import" href="/bower_components/tsj4-bb-template-loader/tsj4-bb-template-loader.html">
+    </head>
+
+    <!-- use fullbleed attribute to specify the body should fill the viewport -->
+    <body unresolved fullbleed layout>
+        <tsj4-bb-template-loader></tsj4-bb-template-loader>
+        <core-scaffold>
+            <core-header-panel navigation flex mode="seamed">
+                <core-toolbar>MENU</core-toolbar>
+                <core-menu theme="core-light-theme">
+
+                </core-menu>
+            </core-header-panel>
+            <div>
+                <div tool flex>Title</div>
+                <core-icon-button tool icon="search"></core-icon-button>
+
+                <div class="content"></div>
+            </div>
+        </core-scaffold>
+    </body>
 </html>
