--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,6 +4,7 @@
         <title><%= title %></title>
 
         <meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1.0, user-scalable=yes">
+        <link href="styles/min.css" media="all" rel="stylesheet" type="text/css">
 
         <style>
             html {
@@ -16,7 +17,7 @@
         </style>
 
         <!-- 1. Load webcomponents.min.js for polyfill support. -->
-        <script src="javascript/scripts.js"></script>
+        <script src="javascript/min.js"></script>
 
 
         <!-- 2. Use an HTML Import to bring in the element. -->
