--- a/public/templates/menu-view.html
+++ b/public/templates/menu-view.html
@@ -1,11 +1,12 @@
 <% _.each(obj.items, function (item) { %>
     <% if (item.hasOwnProperty("icon") && item.icon) { %>
-        <core-item icon="<%= item.icon %>" label="<%= item.label %>">
-            <a href="#<%= item.hash %>" target="_self"></a>
-        </core-item>
+    <paper-item>
+        <core-icon icon="<%= item.icon%>"></core-icon>
+        <%= item.label %>
+    </paper-item>
     <% } else { %>
-        <core-item label="<%= item.label %>">
-            <a href="#<%= item.hash %>" target="_self"></a>
-        </core-item>
+    <paper-item noink>
+        <%= item.label %>
+    </paper-item>
     <% } %>
 <% }); %>
